--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
-    "knex": "^3.1.0",
+    "prisma": "^5.14.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.11.0",
     "typescript": "^5.4.5"
   },
   "name": "daily-diet-api",
