--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# Node.js
 node_modules
+dist
+.env
+
+# Banco de dados
+*.db
+*.db-journal
+
+# Prisma
+prisma/database.db
+prisma/database.db-journal
