--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.12",
     "prisma": "^5.14.0",
     "ts-node": "^10.9.2",
@@ -15,7 +16,7 @@
     "typescript": "^5.4.5"
   },
   "name": "daily-diet-api",
-  "description": "Uma API criada para um desafio do curso de Node.js da Rocketseat. Na API o usuário pode adicionar suas refeições e listar as que estão dentro ou fora da dieta",
+  "description": "Uma API onde usuário pode adicionar suas refeições e listar as que estão dentro ou fora da dieta",
   "version": "1.0.0",
   "main": "server.ts",
   "scripts": {
@@ -26,7 +27,7 @@
     "type": "git",
     "url": "git+https://github.com/pedrohenrique11/Daily-Diet-API.git"
   },
-  "author": "",
+  "author": "Pedro Henrique",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/pedrohenrique11/Daily-Diet-API/issues"
