--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "pg": "^8.11.5"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.24.7",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
